@@ -1,3 +1,5 @@
 TODO before the next release:
 
-Dump should skip records with date and time equal to zero.
+ET values are not being generated when using software record generation.
+
+Time plots do not allow an x-axis length of less than 24 hours.
