@@ -11,6 +11,9 @@ This has been corrected.
 
 Ported to Korora 19 (Fedora 19). Thanks to user zmodemguru!
 
+Plots under 16 hours in length, now use 1 hour increments (instead of 
+3 hours).
+
 
 2.4.0 08/03/13
 
